Bug 540288 - News article is empty if selected during download from news server. r=bienvenu